# agentic-ai

./: .gitignore  README.md  pyproject.toml  system_comparison_v0.1  walkthrough.md
client/: index.html  package-lock.json
client/src/: App.css  App.jsx  index.css
client/src/components/: ChatInterface.jsx  StepView.jsx  WorkspaceViewer.jsx
server/: config.py  main.py  workspace.db
server/agent/: llm.py  loop.py  prompts.py  schemas.py
server/api/: routes.py
server/tools/: __init__.py  base.py  file_tools.py  indexing.py  python_tool.py  sandbox.py  shell_tool.py
server/workspace/: .gitkeep
